[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qmld"
version = "0.1.0"
authors = [
    {name = "Paige E. Bowling", email = "pbowling@umich.edu"}
]
description = "Quantum Mechanics Lambda Dynamics (QMLD) serves as a pipeline for lambda-scaled QM/MM calculations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "sphinx",
]

[project.urls]
"Homepage" = "https://github.com/pbowling/qmld"
"Bug Tracker" = "https://github.com/pbowling/qmld/issues"
